[gd_scene load_steps=3 format=3 uid="uid://oromwdj7aarb"]

[ext_resource type="Script" path="res://scripts/fade/fade_in_rect.gd" id="1_lttr0"]
[ext_resource type="PackedScene" uid="uid://cv51a7uk50wna" path="res://scenes/fade/timer_in_out.tscn" id="2_76b3n"]

[node name="FadeInRect" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_lttr0")

[node name="TimerInOut" parent="." instance=ExtResource("2_76b3n")]

[connection signal="timeout" from="TimerInOut" to="." method="on_timer_timeout"]
